Fix: Displaying adjacent/overlapping comments.

--- a/src/documentRenderers/richtext/extensions/comments/Comments.module.css
+++ b/src/documentRenderers/richtext/extensions/comments/Comments.module.css
@@ -1,5 +1,9 @@
-.comment {
+.commentBlock {
     display: block;
     position: fixed;
-    margin-left: 50rem;
+    right: 0;
+}
+
+.comment {
+    position: relative
 }
